--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </ul>
 </nav>
     </header>
-    <section></section>
+    <section id="sobre">
+      <h2>sobre mim</h2>
+      <p>sou bem gente boa e tenho um cabelo cacheado 3c</p>
+    </section>
+    <section id="projetos">
+      <h2>projetos</h2>
+      <p></p>
+    </section>
   </body>
 </Html>
