--- a/index.html
+++ b/index.html
@@ -3,8 +3,57 @@
 <head>
   <title>pagina pessoal de Yudson</title>
   </head>
+  <style>
+    *{
+      margin:  0;
+      padding:  0;
+      box-sizing: border-box;
+    }
+    body{
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #f4f4f4;  
+      color: #333;
+      Line-height: 1.6;
+      padding: 20px;
+    }
+    header{
+      background-color: #333;
+      color: #fff;
+      padding: 10px 0;
+      text-align: center;
+    }
+    header h1{
+      margin-bottom: 10px;
+    }
+    nav ul{
+      list-style: none;
+    }
+    nav ul li{
+      display: inline;
+      margin: 0 10px;
+    }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+    }
+    section{
+      margin: 20px 0;
+    }
+    section #sobre
+    section #projetos,
+    section #contatos{
+background-color:  #fff;
+padding: 20px;
+border-radius: 8px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    footer{
+text-align:center;
+margin-top: 20px;
+    }
+  </style>
   <body>
-    <header>
+<header>
         <h1>Yudson victor mendoca moreira</h1>
 <nav>
 <ul>
@@ -16,11 +65,24 @@
     </header>
     <section id="sobre">
       <h2>sobre mim</h2>
-      <p>sou bem gente boa e tenho um cabelo cacheado 3c</p>
+      <p>Tenho 13 anos e sou uma pessoa bem gente boa</p>
     </section>
     <section id="projetos">
-      <h2>projetos</h2>
-      <p></p>
+      <h2>Projetos</h2>
+      <ui>
+<li>Projetos 1: <a href="#">Descricao do projeto 1</a></li>
+<li>Projetos 2: <a href="#">Descricao do projeto 2</a></li>
+<li>Projetos 3: <a href="#">Descricao do projeto 3</a></li>
+<li>Projetos 4: <a href="#">Descricao do projeto 4</a></li>
+<li>Projetos 5: <a href="#">Descricao do projeto 5</a></li>
+      </ui>
     </section>
+    <section id="contato">
+      <h2> contato</h2>
+      <p>Entre em contato comigo via <a href="mailto:yudson_moreira@estudante.sesisenai.org.br">yudson_moreira@estudante.sesisenai.org.br</a> </a> </p>
+    </section>
+    <footer> 
+      <p>&copy; @2025- Yudson</p>
+    </footer>
   </body>
 </Html>
