--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@ margin-top: 20px;
     </section>
     <section id="projetos">
       <h2>Projetos</h2>
-      <ui>
-<li>Projetos 1: <a href="#">Descricao do projeto 1</a></li>
+      <ul>
+<li>Projetos 1: <a href="/projeto2.html">Descricao do projeto 1</a></li>
 <li>Projetos 2: <a href="#">Descricao do projeto 2</a></li>
 <li>Projetos 3: <a href="#">Descricao do projeto 3</a></li>
 <li>Projetos 4: <a href="#">Descricao do projeto 4</a></li>
 <li>Projetos 5: <a href="#">Descricao do projeto 5</a></li>
-      </ui>
+<li>Formulário : <a href="#">Descricao do formulario 1</a></li>
+      </ul>
     </section>
     <section id="contato">
       <h2> contato</h2>
