--- a/formulario.html
+++ b/formulario.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="UTF-8">
+<html>
    <body>
       <head>
     <meta charse="UTR-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="/styleform.css">
+ <link rel="stylesheet" href="static/styleform.css">
 <title>Formulario</title>
    </head>
 <h1>Meu primeiro formulario</h1>
@@ -24,9 +24,12 @@
     <input type="email">
 
    <label for="">Senha:</label>
+   <input type="password">
 
-
-
+   <label for="">Data de nacimento</label>
+   <input type="date">
+   
+   <input type="submit" value="cadastrar">
 </form>
 
  </body>
