--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     }
     body{
       font-family: Arial, Helvetica, sans-serif;
-      background-color: #f4f4f4;  
-      color: #333;
+      background-color: #20f8ff;  
+      color: #000000;
       Line-height: 1.6;
       padding: 20px;
     }
     header{
-      background-color: #333;
+      background-color: #000000;
       color: #fff;
       padding: 10px 0;
       text-align: center;
@@ -42,10 +42,10 @@
     section #sobre
     section #projetos,
     section #contatos{
-background-color:  #fff;
+background-color:  #67ddf1;
 padding: 20px;
 border-radius: 8px;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+box-shadow: 0 0 10px rgba(47, 240, 247, 0.1);
     }
     footer{
 text-align:center;
@@ -75,7 +75,7 @@ margin-top: 20px;
 <li>Projetos 3: <a href="#">Descricao do projeto 3</a></li>
 <li>Projetos 4: <a href="#">Descricao do projeto 4</a></li>
 <li>Projetos 5: <a href="#">Descricao do projeto 5</a></li>
-<li>Formulário : <a href="#">Descricao do formulario 1</a></li>
+<li>Formulário : <a href="formulario.html">Descricao do formulario 1</a></li>
       </ul>
     </section>
     <section id="contato">
