--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ margin-top: 20px;
     <section id="projetos">
       <h2>Projetos</h2>
       <ul>
-<li>Projetos 1: <a href="#">Descricao do projeto 1</a></li>
+<li>Projetos 1: <a href="primeiro.html">Descricao do projeto 1</a></li>
 <li>Projetos 2: <a href="projeto2.html">Descricao do projeto 2</a></li>
 <li>Projetos 3: <a href="#">Descricao do projeto 3</a></li>
 <li>Projetos 4: <a href="#">Descricao do projeto 4</a></li>
